container to ease styling

--- a/lights.html
+++ b/lights.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>X-MAS LIGHTS</title>
     <link rel="stylesheet" href="lights.css">
-    <script src="lights.js"></script>
 </head>
 <body>
-    
+    <h1>MERRY CHRISTMAS 💕</h1>
+    <div class="xmaslights" id="container">
+        <div class="red"></div>
+        <div class="blue"></div>
+        <div class="green"></div>
+        <div class="red"></div>
+        <div class="pink"></div>
+        <div class="purple"></div>
+        <div class="green"></div>
+    </div>
+    <button onclick="addLight()">Add Light</button>
+    <button onclick="toggleLights()">Toggle Blink</button>
+    <script src="lights.js"></script>
+
 </body>
 </html>
